--- a/build.yaml
+++ b/build.yaml
@@ -14,8 +14,6 @@
 ---
 include:
   - board: nice_nano_v2
-    shield: splitkb_aurora_lily58_left
+    shield: splitkb_aurora_lily58_left nice_view
   - board: nice_nano_v2
     shield: splitkb_aurora_lily58_right
-  - board: nice_nano_v2
-    shield: settings_reset
