--- a/config/splitkb_aurora_lily58.conf
+++ b/config/splitkb_aurora_lily58.conf
@@ -11,3 +11,4 @@ CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
 # Uncomment the following lines to enable RGB underglow
 # CONFIG_ZMK_RGB_UNDERGLOW=y
 # CONFIG_ZMK_BACKLIGHT=y
+CONFIG_ZMK_USB_LOGGING=y
